--- a/main.css
+++ b/main.css
@@ -23,19 +23,32 @@ li{
     --fontColor: var(--black);
   }
   
+  .light-theme {
+    --bg: var(--green);
+    --fontColor: var(--black);
+    --btnBg: var(--black);
+    --btnFontColor: var(--white);
+  }
+  
   .dark-theme {
     --bg: var(--black);
     --fontColor: var(--green);
-  }
-  .light-theme {
-    color: #000000;
-    background: #00FF00;
-  }
-  * {
-    color: var(--fontColor);
-    font-family: helvetica;
+    --btnBg: var(--white);
+    --btnFontColor: var(--black);
   }
   
   body {
       background: var(--bg);
   }
+  .btn {
+    position: absolute;
+    top: 20px;
+    left: 250px;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    border: none;
+    color: var(--btnFontColor);
+    background-color: var(--btnBg);
+  }
+  .btn:focus { outline-style: none; }
